[tool.poetry]
name = "alpine"
version = "0.3.0"
description = "Anachronistic Lineage and Persistent INfection Explorer"
authors = ["Nicholas Minor <nrminor@wisc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
polars = "^0.20.3"
pandas = "^2.1.4"
numpy = "^1.26.3"
pyarrow = "^14.0.2"
bio = "^1.6.2"
result = "^0.16.0"
loguru = "^0.7.2"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
blackdoc = "^0.3.9"
pdoc = "^14.1.0"
mypy = "^1.7.1"
ipykernel = "^6.27.1"
quarto = "^0.1.0"
pre-commit = "^3.6.0"
tox = "^4.11.4"
pytest = "^7.4.3"
codecarbon = "^2.3.2"
just = "^0.8.161"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
